feat: Product Status, API 위치 변경, 이미지 service 추가